# wasm-shooting-game

./: .gitignore  CMakeLists.txt  README.md  index.html  main.data  main.js  main.wasm  vcpkg.json
.github/workflows/: wasm-deploy.yml
resources/scene/: 1.txt  2.txt
resources/shader/: Background.frag  Background.vert  BackgroundV3.frag  BackgroundV3.vert  Bullet.frag  Bullet.vert  BulletV3.frag  BulletV3.vert  Sprite.frag  Sprite.vert  SpriteV3.vert
src/: Game.cpp  Game.h  Main.cpp
src/actor/: Background.cpp  Background.h  BackgroundShader.cpp  BackgroundShader.h  BackgroundSpawner.cpp  BackgroundSpawner.h  Bullet.cpp  Bullet.h  BulletSpawner.cpp  BulletSpawner.h  Enemy.cpp  Enemy.h  EnemySpawner.cpp  EnemySpawner.h  ExplosionEffect.cpp  ExplosionEffect.h  HealthBar.cpp  HealthBar.h  Player.cpp  Player.h  PlayerLife.cpp  PlayerLife.h  ScoreActor.cpp  ScoreActor.h  Spawner.cpp  Spawner.h  TextActor.cpp  TextActor.h
src/asset/: Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  Font.cpp  Font.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/audio/: AudioManager.cpp  AudioManager.h
src/ecs/: Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Physics.h
src/scene/: Action.cpp  Action.h  Scene.cpp  Scene.h  SceneMenu.cpp  SceneMenu.h  ScenePlay.cpp  ScenePlay.h
src/sound/: SoundManager.cpp  SoundManager.h
test/: CMakeLists.txt
test/src/: SampleTest.cpp
test/src/ecs/: AIMoveComponentTest.cpp  ComponentsTest.cpp  EntityManagerTest.cpp  MoveComponentTest.cpp  SplineMoveComponentTest.cpp
test/src/learning/: GlmTest.cpp
